--- a/{{cookiecutter.dir_name}}/settings.ini
+++ b/{{cookiecutter.dir_name}}/settings.ini
@@ -1,17 +1,12 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
-# For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
-# company_name = nike
-
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+lib_name = {{cookiecutter.dir_name}}
+user = hdmamin
+description = {{cookiecutter.description}}
+author = {{cookiecutter.author}}
+author_email = {{cookiecutter.email}}
+copyright = {{cookiecutter.author}}
 branch = master
 version = 0.0.1
 min_python = 3.6
@@ -24,8 +19,6 @@ license = apache2
 # From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
 status = 2
 
-# Optional. Same format as setuptools requirements
-# requirements = 
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
@@ -37,7 +30,7 @@ status = 2
 ###
 
 # Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
-nbs_path = .
+nbs_path = dev_notebooks
 doc_path = docs
 
 # Anything shown as '%(...)s' is substituted with that setting automatically
@@ -51,22 +44,18 @@ doc_baseurl = /%(lib_name)s/
 # doc_baseurl = /%(repo_name)s/%(lib_name)s/
 
 git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
-# For Enterprise Github use:
-#git_url = https://github.%(company_name)s.com/%(repo_name)s/%(lib_name)s/tree/%(branch)s/
-
-
 
 lib_path = %(lib_name)s
 title = %(lib_name)s
 
 #Optional advanced parameters
-#Monospace docstings: adds <pre> tags around the doc strings, preserving newlines/indentation.
-#monospace_docstrings = False
+#Monospace docstrings: adds <pre> tags around the doc strings, preserving newlines/indentation.
+monospace_docstrings = True
 #Test flags: introduce here the test flags you want to use separated by |
 #tst_flags = 
 #Custom sidebar: customize sidebar.json yourself for advanced sidebars (False/True)
 #custom_sidebar = 
 #Cell spacing: if you want cell blocks in code separated by more than one new line
-#cell_spacing = 
+cell_spacing = 2
 #Custom jekyll styles: if you want more jekyll styles than tip/important/warning, set them here
 #jekyll_styles = note,warning,tip,important
